# ArgusNet

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  AGENT_TEAM.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LEGAL.md  README.md  SAFETY.md  SECURITY.md  pyproject.toml  test-replay.json
.claude/: launch.json
.github/: dependabot.yml
.github/workflows/: ci.yml  nightly-bench.yml
docs/: ARCHITECTURE_DECISIONS.md  CRITICAL_REVIEW.md  FUSION.md  INDEXING.md  INSPECTION.md  KNOWN_GAPS.md  LIVE_OPERATIONS.md  LOCALIZATION.md  MAPPING.md  MISSION_EXECUTION.md  MISSION_MODEL.md  MISSION_PROFILES.md  PERFORMANCE_AND_BENCHMARKING.md  PLANNING.md  ROADMAP.md  SAFETY.md  SCENARIOS.md  SESSION_STATE.md  STATE_OWNERSHIP.md  TERRAIN.md  VIEWER_UI.md  architecture.md  changelog.md  replay-schema.json  usage.md
docs/adr/: 000-template.md  001-perf-benchmarking-rollout.md  001-world-model-authority.md  002-fused-track-authority.md  003-mission-intent-pipeline.md
docs/performance/: live-isr-100-targets.json
proto/argusnet/v1/: world_model.proto
proto/smarttracker/v1/: tracker.proto
rust/argusnet-core/: Cargo.toml
rust/argusnet-core/benches/: association_bench.rs  fusion_bench.rs
rust/argusnet-core/src/: association.rs  lib.rs
rust/argusnet-proto/: Cargo.toml  build.rs
rust/argusnet-proto/benches/: proto_bench.rs
rust/argusnet-proto/src/: lib.rs
rust/argusnet-server/: Cargo.toml
rust/argusnet-server/benches/: grpc_bench.rs
rust/argusnet-server/src/: lib.rs  main.rs
rust/argusnet-server/tests/: grpc_parity.rs
rust/argusnet-viewer/: Cargo.toml
rust/argusnet-viewer/src/: app.rs  headless.rs  lib.rs  live.rs  main.rs  mission_zones.rs  orbit_camera.rs  replay.rs  schema.rs  state.rs  ui.rs
rust/safety-engine/: Cargo.toml
rust/safety-engine/benches/: safety_bench.rs
rust/safety-engine/src/: lib.rs  limits.rs  monitor.rs  validator.rs
rust/terrain-engine/: Cargo.toml
rust/terrain-engine/benches/: terrain_bench.rs
rust/terrain-engine/src/: lib.rs
rust/tracker-core/: Cargo.toml
rust/tracker-core/src/: association.rs  lib.rs
rust/tracker-proto/: Cargo.toml  build.rs
rust/tracker-proto/src/: lib.rs
rust/tracker-server/: Cargo.toml
rust/tracker-server/src/: lib.rs  main.rs
rust/tracker-server/tests/: grpc_parity.rs
rust/tracker-viewer/: Cargo.toml
rust/tracker-viewer/src/: headless.rs  main.rs  orbit_camera.rs
scene.smartscene/: scene_manifest.json
scene.smartscene/metadata/: environment.json  style.json
scene.smartscene/overlays/: buildings.glb  vegetation.glb
scene.smartscene/terrain/: terrain-base.glb
src/argusnet/: __init__.py  __main__.py
src/argusnet/adapters/: argusnet_grpc.py
src/argusnet/cli/: benchmark.py  main.py  scene.py  sim.py
src/argusnet/core/: config.py  errors.py  frames.py  geometry.py  ids.py  io_limits.py  time.py  types.py  validation.py
src/argusnet/evaluation/: benchmarks.py  export.py  metrics.py  perf_summary.py  recording.py  replay.py  reports.py  scenarios.py  scorecard.py
src/argusnet/indexing/: descriptors.py  keyframes.py  landmarks.py  mission_index.py  observation_index.py  retrieval.py  tile_index.py
src/argusnet/localization/: __init__.py  engine.py  gnss_fusion.py  loop_closure.py  odometry.py  pose_graph.py  query.py  relocalization.py  state.py  transforms.py  vio.py
src/argusnet/mapping/: __init__.py  belief.py  change_detection.py  coverage.py  elevation.py  fusion.py  occupancy.py  semantics.py  uncertainty.py  world_map.py  world_model.py
src/argusnet/mission/: __init__.py  execution.py  health.py  profiles.py
src/argusnet/planning/: __init__.py  battery.py  coordination.py  coverage.py  deconfliction.py  frontier.py  inspection.py  next_best_view.py  planner_3d.py  planner_base.py  poi.py  revisit.py
src/argusnet/safety/: checker.py
src/argusnet/security/: __init__.py  identity.py  transport.py
src/argusnet/sensing/: __init__.py  camera.py  depth.py  gnss.py  imu.py  observation_source.py  sensor_base.py  thermal.py
src/argusnet/simulation/: behaviors.py  coverage.py  sim.py
src/argusnet/ui/: keyframe_browser.py  map_view.py  mission_view.py  overlays.py  timeline.py
src/argusnet/v1/: world_model_pb2.py  world_model_pb2_grpc.py
src/argusnet/world/: _cache.py  _glb.py  _scene_geometry.py  _scene_gis.py  _scene_style.py  environment.py  (+7 more)
src/smart_tracker/: __init__.py  __main__.py  _glb.py  _scene_geometry.py  _scene_gis.py  _scene_style.py  behaviors.py  cli.py  config.py  cooperative_planner.py  coordinates.py  environment.py  environment_io.py  evaluation.py  export.py  fusion.py  ingest.py  mission_gen.py  models.py  obstacles.py  planning.py  replay.py  scene.py  scene_cli.py  sensor_models.py  service.py  sim.py  terrain.py  visibility.py  weather.py
src/smarttracker/: __init__.py
test-scene/: scene_manifest.json
test-scene/metadata/: environment.json  style.json
test-scene/overlays/: buildings.glb  vegetation.glb
test-scene/terrain/: terrain-base.glb
tests/: example_integration.py  test_anti_replay.py  test_battery.py  test_behaviors.py  test_belief_query.py  test_belief_runtime.py  test_benchmarks.py  test_cli.py  test_cli_usability.py  test_collision.py  test_cooperative_planner.py  test_cooperative_search.py  test_coordinates.py  test_coordination_claims_wired.py  test_coverage_map.py  test_deconfliction.py  test_device_identity.py  test_environment.py  test_evaluation.py  test_export.py  test_export_formats.py  test_fusion_advanced.py  test_gnss.py  test_health.py  test_ingest.py  test_io_limits.py  test_isr_mission.py  test_land_cover.py  test_localization_pose.py  test_mission_executor_authority.py  test_mission_gen.py  test_mission_health_execution.py  test_mission_profiles.py  test_mqtt_validation.py  test_observation_source.py  test_occlusion_aware_mapping.py  test_path_planner_used_for_goto.py  test_performance_regression.py  test_planner_3d.py  test_planning.py  (+24 more)
tests/benchmarks/: test_obstacle_bench.py  test_proto_roundtrip_bench.py  test_scenario_bench.py  test_terrain_bench.py
tests/fixtures/: runtime_parity_fixture.json
(+10 files in other folders)
