[workspace]
members = [
  "rust/terrain-engine",
  "rust/safety-engine",
  "rust/tracker-core",
  "rust/tracker-proto",
  "rust/tracker-server",
  "rust/tracker-viewer",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["clock"] }
clap = { version = "4.5", features = ["derive"] }
nalgebra = "0.33"
prost = "0.14"
prost-types = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "sync", "time"] }
tokio-stream = "0.1"
tonic = { version = "0.14", features = ["transport"] }
tonic-build = "0.14"
tonic-prost = "0.14"
tonic-prost-build = "0.14"
protoc-bin-vendored = "3.2"
