[package]
name = "argusnet-proto"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
nalgebra.workspace = true
prost.workspace = true
prost-types.workspace = true
tonic.workspace = true
tonic-prost.workspace = true
argusnet-core = { path = "../argusnet-core" }

[build-dependencies]
tonic-prost-build.workspace = true
protoc-bin-vendored.workspace = true

[dev-dependencies]
criterion.workspace = true
prost.workspace = true

[[bench]]
name = "proto_bench"
harness = false
