[package]
name = "argusnet-viewer"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "argusnet_viewer"
path = "src/lib.rs"

[[bin]]
name = "argusnet-viewer"
path = "src/main.rs"

[features]
# live-stream is on by default so a plain `cargo build --workspace` keeps the
# viewer's `--live` flag. Build with `--no-default-features` for a lean,
# replay-only viewer without the tokio/tonic/proto dependencies.
default = ["live-stream"]
# Enables live gRPC frame ingestion from argusnet-server (--live <endpoint>).
live-stream = ["dep:argusnet-proto", "dep:tokio", "dep:tonic"]

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
bevy = "0.15.3"
bevy_egui = "0.31.1"
egui_extras = "0.29"
egui_plot = "0.29"
image = { version = "0.25", default-features = false, features = ["png"] }
argusnet-proto = { path = "../argusnet-proto", optional = true }
tokio = { workspace = true, optional = true }
tonic = { workspace = true, optional = true }
