[package]
name = "safety-engine"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
nalgebra.workspace = true
serde.workspace = true
terrain-engine = { path = "../terrain-engine" }

[dev-dependencies]
criterion.workspace = true
serde_json.workspace = true

[[bench]]
name = "safety_bench"
harness = false
