[package]
name = "tracker-proto"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
nalgebra.workspace = true
prost.workspace = true
prost-types.workspace = true
tonic.workspace = true
tonic-prost.workspace = true
tracker-core = { path = "../tracker-core" }

[build-dependencies]
tonic-prost-build.workspace = true
protoc-bin-vendored.workspace = true
