[package]
name = "tracker-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "smart-trackerd"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tonic.workspace = true
tracker-core = { path = "../tracker-core" }
tracker-proto = { path = "../tracker-proto" }
